--- a/homework/Day_006_HW.ipynb
+++ b/homework/Day_006_HW.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# 設定 data_path, 並讀取 app_train\n",
-    "dir_data = './data/'\n",
+    "dir_data = 'C:/Users/user/Documents/GitHub/Part01'\n",
     "f_app_train = os.path.join(dir_data, 'application_train.csv')\n",
     "app_train = pd.read_csv(f_app_train)"
    ]
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,19 +80,6 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -145,26 +134,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(307511, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_FRIDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_MONDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_SATURDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_SUNDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_THURSDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_TUESDAY</th>\n",
+       "      <th>WEEKDAY_APPR_PROCESS_START_WEDNESDAY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   WEEKDAY_APPR_PROCESS_START_FRIDAY  WEEKDAY_APPR_PROCESS_START_MONDAY  \\\n",
+       "0                                0.0                                0.0   \n",
+       "1                                0.0                                1.0   \n",
+       "2                                0.0                                1.0   \n",
+       "3                                0.0                                0.0   \n",
+       "4                                0.0                                0.0   \n",
+       "\n",
+       "   WEEKDAY_APPR_PROCESS_START_SATURDAY  WEEKDAY_APPR_PROCESS_START_SUNDAY  \\\n",
+       "0                                  0.0                                0.0   \n",
+       "1                                  0.0                                0.0   \n",
+       "2                                  0.0                                0.0   \n",
+       "3                                  0.0                                0.0   \n",
+       "4                                  0.0                                0.0   \n",
+       "\n",
+       "   WEEKDAY_APPR_PROCESS_START_THURSDAY  WEEKDAY_APPR_PROCESS_START_TUESDAY  \\\n",
+       "0                                  0.0                                 0.0   \n",
+       "1                                  0.0                                 0.0   \n",
+       "2                                  0.0                                 0.0   \n",
+       "3                                  0.0                                 0.0   \n",
+       "4                                  1.0                                 0.0   \n",
+       "\n",
+       "   WEEKDAY_APPR_PROCESS_START_WEDNESDAY  \n",
+       "0                                   1.0  \n",
+       "1                                   0.0  \n",
+       "2                                   0.0  \n",
+       "3                                   1.0  \n",
+       "4                                   0.0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_train = pd.get_dummies(sub_train)\n",
+    "print(app_train.shape)\n",
+    "app_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "colab": {
    "name": "Day_004_column_data_type.ipynb",
    "provenance": [],
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -178,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
